--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,12 @@ spring:
     name: auth-service
   cloud:
     config:
-      uri: http://config:8888
+      #uri: http://config:8888
+      uri: http://localhost:8888
       fail-fast: true
-      password: ${CONFIG_SERVICE_PASSWORD}
+      #password: ${CONFIG_SERVICE_PASSWORD}
+      password: 123456
       username: user
+erver:
+  context-path: /uaa
+  port: 5000
