--- a/config/src/main/resources/shared/auth-service.yml
+++ b/config/src/main/resources/shared/auth-service.yml
@@ -1,12 +1,14 @@
 spring:
   data:
     mongodb:
-      host: auth-mongodb
-      username: user
-      password: ${MONGODB_PASSWORD}
-      database: piggymetrics
-      port: 27017
+      #host: account-mongodb
+      #host: 127.0.0.1
+      #username: user
+      #password: 123456
+      #database: piggymetrics
+      #port: 27017
+      uri: mongodb://user:123456@localhost:27017/piggymetrics
 
 server:
   context-path: /uaa
-  port: 5000
+  #port: 5000
