--- a/config/src/main/resources/shared/gateway.yml
+++ b/config/src/main/resources/shared/gateway.yml
@@ -19,7 +19,8 @@ zuul:
   routes:
     auth-service:
         path: /uaa/**
-        url: http://auth-service:5000
+        #url: http://auth-service:5000
+        url: http://localhost:5000
         stripPrefix: false
         sensitiveHeaders:
 
@@ -42,4 +43,4 @@ zuul:
         sensitiveHeaders:
 
 server:
-  port: 4000
+  port: 4001
