--- a/config/src/main/resources/shared/notification-service.yml
+++ b/config/src/main/resources/shared/notification-service.yml
@@ -2,8 +2,9 @@ security:
   oauth2:
     client:
       clientId: notification-service
-      clientSecret: ${NOTIFICATION_SERVICE_PASSWORD}
-      accessTokenUri: http://auth-service:5000/uaa/oauth/token
+      #clientSecret: ${NOTIFICATION_SERVICE_PASSWORD}
+      clientSecret: 123456
+      accessTokenUri: http://localhost:5000/uaa/oauth/token
       grant-type: client_credentials
       scope: server
 
@@ -27,11 +28,14 @@ backup:
 spring:
   data:
     mongodb:
-      host: notification-mongodb
-      username: user
-      password: ${MONGODB_PASSWORD}
-      database: piggymetrics
-      port: 27017
+      #host: account-mongodb
+      #host: 127.0.0.1
+      #username: user
+      #password: 123456
+      #database: piggymetrics
+      #port: 27017
+      uri: mongodb://user:123456@localhost:27017/piggymetrics
+
   mail:
     host: smtp.gmail.com
     port: 465
