--- a/config/src/main/resources/shared/statistics-service.yml
+++ b/config/src/main/resources/shared/statistics-service.yml
@@ -2,19 +2,23 @@ security:
   oauth2:
     client:
       clientId: statistics-service
-      clientSecret: ${STATISTICS_SERVICE_PASSWORD}
-      accessTokenUri: http://auth-service:5000/uaa/oauth/token
+      #clientSecret: ${STATISTICS_SERVICE_PASSWORD}
+      clientSecret: 123456
+      #accessTokenUri: http://auth-service:5000/uaa/oauth/token
+      accessTokenUri: http://localhost:5000/uaa/oauth/token
       grant-type: client_credentials
       scope: server
 
 spring:
   data:
     mongodb:
-      host: statistics-mongodb
-      username: user
-      password: ${MONGODB_PASSWORD}
-      database: piggymetrics
-      port: 27017
+      #host: account-mongodb
+      #host: 127.0.0.1
+      #username: user
+      #password: 123456
+      #database: piggymetrics
+      #port: 27017
+      uri: mongodb://user:123456@localhost:27017/piggymetrics
 
 server:
   context-path: /statistics
